--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   geolocator: ^13.0.2
   intl: ^0.19.0
   shared_preferences: ^2.3.2
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
