--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,16 @@
 *.log
 *.pyc
 *.swp
+*.tmp
+*.dSYM
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
 .atom/
 .build/
 .buildlog/
@@ -12,34 +21,77 @@
 .swiftpm/
 migrate_working_dir/
 
-# IntelliJ related
+# IntelliJ / Android Studio
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# VS Code
+.vscode/
 
-# Flutter/Dart/Pub related
+# Sublime
+*.sublime-workspace
+*.sublime-project
+
+# Flutter/Dart/Pub
 **/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
-/build/
-/coverage/
+build/
+coverage/
+.lcov
+.fvm/
+**/ios/Flutter/.last_build_id
 
-# Symbolication related
+# Web
+lib/generated_plugin_registrant.dart
+
+# Symbolication
 app.*.symbols
 
-# Obfuscation related
+# Obfuscation
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Android
+.gradle/
+android/.gradle/
+android/local.properties
+android/**/build/
+android/app/**/outputs/
+android/app/debug
+android/app/profile
+android/app/release
+
+# iOS
+ios/Flutter/ephemeral/
+ios/Flutter/Flutter.framework
+ios/Flutter/App.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Flutter/flutter_export_environment.sh
+ios/Pods/
+ios/.symlinks/
+ios/Podfile.lock
+
+# macOS
+macos/Flutter/ephemeral/
+macos/Flutter/Flutter.framework
+macos/Flutter/App.framework
+macos/Flutter/Flutter.podspec
+macos/Flutter/Generated.xcconfig
+macos/Flutter/flutter_export_environment.sh
+macos/Pods/
+macos/.symlinks/
+macos/Podfile.lock
+
+# Windows
+windows/flutter/ephemeral/
+windows/.vs/
+
+# Linux
+linux/flutter/ephemeral/
